syntax = "proto3";

package store;

option go_package = "distributed-kvs/pkg/api/store";

import "google/protobuf/empty.proto";

service Store {
  rpc Get(GetRequest) returns (GetResponse){}
  rpc Set(SetRequest) returns (google.protobuf.Empty){}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){}
  rpc Join(JoinRequest) returns (google.protobuf.Empty){}
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message DeleteRequest {
  string key = 1;
}

message JoinRequest {
  string node_id = 1;
  string addr = 2;
}
